# instadumper

./: .dockerignore  .env.development  .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: parser.py
src/libraries/: __init__.py  dump.py  parser_main.py  parsing_highlights.py  supporting.py
src/models/: base.py  crud.py  engins.py  tables.py
tests/: all_tests.py  data_for_tests.py
